k8s/cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: fincal
  name: blazorwasm-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 80
      targetPort: 80
