k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  namespace: fincal
  name: ingress-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    # REMOVE CLASSNAME ANNOTATION
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  # ADD INGRESSCLASSNAME FIELD
  rules:
    - host: fincal.fswoon.au
      http:
        paths:
          - path: /
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: blazorwasm-cluster-ip-service
                port:
                  number: 80
  tls:
    - hosts: 
      - fincal.fswoon.au
      secretName: tls-fincal-ingress
